fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,9 @@
+
+
+*{
+border: 1 px solid red;
+}
+
 body{
 padding: 0;
 margin: 0;
